--- a/app/src/main/res/layout/fragment_client_menu.xml
+++ b/app/src/main/res/layout/fragment_client_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ClientMenuFragment">
+    tools:context=".screens.ClientMenuFragment">
 
     <ImageView
         android:layout_width="250dp"
