--- a/app/src/main/res/layout/fragment_poker.xml
+++ b/app/src/main/res/layout/fragment_poker.xml
@@ -5,7 +5,7 @@
     android:id="@+id/pokerFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ThreeCardsFragment">
+    tools:context=".screens.PokerFragment">
 
     <LinearLayout
         android:layout_width="wrap_content"
