--- a/app/src/main/res/layout/fragment_three_cards.xml
+++ b/app/src/main/res/layout/fragment_three_cards.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ThreeCardsFragment">
+    tools:context=".screens.ThreeCardsFragment">
 
     <LinearLayout
         android:layout_width="300dp"
